--- a/apps/mis-api-e2e/project.json
+++ b/apps/mis-api-e2e/project.json
@@ -1,14 +1,14 @@
 {
-  "name": "pet-mis-e2e",
+  "name": "mis-api-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "implicitDependencies": ["pet-mis"],
+  "implicitDependencies": ["mis-api"],
   "projectType": "application",
   "targets": {
     "e2e": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{e2eProjectRoot}"],
       "options": {
-        "jestConfig": "apps/pet-mis-e2e/jest.config.ts",
+        "jestConfig": "apps/mis-api-e2e/jest.config.ts",
         "passWithNoTests": true
       }
     }
